--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -2,40 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Legacy ARIA 1.0 Combobox With Both List and Inline Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
+<title>Combobox With Both List and Inline Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-<link rel="stylesheet" href="../../css/core.css">
-<script type="text/javascript" src="../../js/examples.js"></script>
-<script type="text/javascript" src="../../js/highlight.pack.js"></script>
-<script type="text/javascript" src="../../js/app.js"></script>
+<link rel="stylesheet" href="../css/core.css">
+<script type="text/javascript" src="../js/examples.js"></script>
+<script type="text/javascript" src="../js/highlight.pack.js"></script>
+<script type="text/javascript" src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
-<link rel="stylesheet" href="css/combobox-1.0.css">
+<link rel="stylesheet" href="css/combobox.css">
 <link rel="stylesheet" href="css/listbox.css">
-<script type="text/javascript" src="js/combobox-1.0-list.js"></script>
+<script type="text/javascript" src="js/combobox-list.js"></script>
 <script type="text/javascript" src="js/listbox.js"></script>
 <script type="text/javascript" src="js/listboxOption.js"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
     <ul>
-      <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
       <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
       <li><a href="https://github.com/w3c/aria-practices/projects/7">Related Issues</a></li>
-      <li><a href="../../../#combobox">Design Pattern</a></li>
+      <li><a href="../../#combobox">Design Pattern</a></li>
     </ul>
   </nav>
   <main>
-    <h1>Legacy ARIA 1.0 Combobox With Both List and Inline Autocomplete Example</h1>
-    <p>
-      <strong>NOTE:</strong> Please provide feedback in
-      <a href="https://github.com/w3c/aria-practices/issues/553">issue 553.</a>
-    </p>
+    <h1>Combobox With Both List and Inline Autocomplete Example</h1>
     <p>
       The below combobox for choosing the name of a US state or territory demonstrates the
-      <a href="../../../#combobox">ARIA 1.0 design pattern for combobox.</a>
+      <a href="../../#combobox">ARIA 1.0 design pattern for combobox.</a>
       The design pattern describes four types of autocomplete behavior.
       This example illustrates the autocomplete behavior referred to in the pattern as list with inline completion.
       If the user types one or more characters in the edit box and the typed characters match the beginning of the name of one or more states or territories,
@@ -46,10 +42,9 @@
     </p>
     <p>Similar examples include:</p>
     <ul>
-      <li><a href="combobox-autocomplete-list.html">ARIA 1.0 Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q> and uses the ARIA 1.0 implementation pattern.</li>
-      <li><a href="combobox-autocomplete-none.html">ARIA 1.0 Combobox Without Autocomplete</a>: A combo box that demonstrates the behavior associated with <code>aria-autocomplete=none</code> and uses the ARIA 1.0 implementation pattern.</li>
-      <li><a href="../aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup</a>: Comboboxes that demonstrate the various forms of autocomplete behavior using a listbox popup and use the ARIA 1.1 implementation pattern.</li>
-      <li><a href="../aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup</a>: A combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
+      <li><a href="combobox-autocomplete-list.html">Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
+      <li><a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>: A combo box that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
+      <li><a href="grid-combo.html">Combobox with Grid Popup</a>: A combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
     </ul>
     <section>
       <h2 id="ex_label">Example</h2>
@@ -59,7 +54,7 @@
           <label for="cb1-input">State</label>
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
-              aria-expanded="false" aria-haspopup="true" aria-owns="lb1"
+              aria-expanded="false" aria-haspopup="true" aria-controls="lb1"
             />
             <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">&#9661;</button>
           </div>
@@ -131,7 +126,7 @@
       <p>
       The example combobox on this page implements the following keyboard interface.
         Other variations and options for the keyboard interface are described in the
-        <a href="../../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
+        <a href="../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
       </p>
       <h3 id="kbd_label_textbox">Textbox</h3>
       <table aria-labelledby="kbd_label_textbox kbd_label" class="def">
@@ -196,7 +191,7 @@
         <strong>NOTE:</strong> When visual focus is in the listbox, DOM focus remains on the textbox and the value of <code>aria-activedescendant</code> on the textbox is set to a value that refers to the listbox option that is visually indicated as focused.
         Where the following descriptions of keyboard commands mention focus, they are referring to the visual focus indicator.
         For more information about this focus management technique, see
-        <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+        <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
       </p>
       <table aria-labelledby="kbd_label_listbox kbd_label" class="def">
         <thead>
@@ -280,7 +275,7 @@
       <p>
         The example combobox on this page implements the following ARIA roles, states, and properties.
         Information about other ways of applying ARIA roles, states, and properties is available in the
-        <a href="../../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
+        <a href="../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
       </p>
       <h3 id="rps_label_textbox">Textbox</h3>
       <table aria-labelledby="rps_label_textbox rps_label" class="data attributes">
@@ -299,12 +294,7 @@
             </th>
             <td></td>
             <td><code>input[type="text"]</code></td>
-            <td>
-              <ul>
-                <li>Identifies the input as a combobox.</li>
-                <li>Note: The primary difference between the ARIA 1.0 pattern and the ARIA 1.1 pattern is the placement of the <code>combobox</code> role.</li>
-              </ul>
-            </td>
+            <td>Identifies the input as a combobox.</td>
           </tr>
           <tr data-test-id="combobox-aria-autocomplete">
             <td></td>
@@ -322,18 +312,13 @@
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the combobox can popup another element to suggest values.</td>
           </tr>
-          <tr data-test-id="combobox-aria-owns">
+          <tr data-test-id="combobox-aria-controls">
             <td></td>
             <th scope="row">
               <code>aria-owns="#IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
-            <td>
-              <ul>
-                <li>Identifies the element that serves as the popup.</li>
-                <li>Note: In the ARIA 1.1 combobox pattern, the combobox uses <code>aria-controls</code> instead of <code>aria-owns</code>.</li>
-              </ul>
-            </td>
+            <td>Identifies the element that serves as the popup.</td>
           </tr>
           <tr data-test-id="combobox-aria-expanded">
             <td></td>
@@ -364,7 +349,7 @@
                 <li>Enables assistive technologies to know which element the application regards as focused while DOM focus remains on the <code>input</code> element.</li>
                 <li>
                   For more information about this focus management technique, see
-                  <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+                  <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
                 </li>
               </ul>
             </td>
@@ -432,11 +417,10 @@
 
     <section>
       <h2>Javascript and CSS Source Code</h2>
-      <!--  After the js and css files are named with the name of this example, change the href and text of the following 2 links to refer to the appropriate js and css files.  -->
       <ul>
         <li>
           CSS:
-          <a href="css/combobox-1.0.css" type="text/css">combobox-1.0.css</a>
+          <a href="css/combobox.css" type="text/css">combobox.css</a>
         </li>
         <li>
           CSS:
@@ -444,7 +428,7 @@
         </li>
         <li>
           Javascript:
-          <a href="js/combobox-1.0-list.js" type="text/javascript">combobox-1.0-list.js</a>
+          <a href="js/combobox-list.js" type="text/javascript">combobox-1.0-list.js</a>
         </li>
         <li>
           Javascript:
@@ -467,7 +451,6 @@
       <!--
         The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
         It renders the HTML in the preceding pre element with ID 'sc1'.
-        If you change the ID of either the 'ex1' div or the 'sc1' pre, be sure to update the sourceCode.add function parameters.
         -->
       <script>
         sourceCode.add('sc1', 'ex1');
@@ -476,7 +459,7 @@
     </section>
   </main>
   <nav>
-    <a href="../../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.2</a>
+    <a href="../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.2</a>
   </nav>
 </body>
 </html>
