--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -53,12 +53,7 @@
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
               aria-expanded="false" aria-controls="lb1">
             <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">
-              <span class="arrow up">
-                <svg width="18" height="18">
-                  <polygon points="4,12 14,12 9,5" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
-                </svg>
-              </span>
-              <span class="arrow down">
+              <span class="arrow">
                 <svg width="18" height="18">
                   <polygon points="4,5 14,5 9,12" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
                 </svg>
