--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -54,14 +54,9 @@
                    aria-expanded="false"
                    aria-controls="cb1-listbox">
             <button type="button" id="cb1-button" tabindex="-1" aria-label="Open">
-              <span class="arrow up">
+              <span class="arrow">
                 <svg width="18" height="18">
-                  <polygon points="4,16 14,16 9,9" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
-                </svg>
-              </span>
-              <span class="arrow down">
-                <svg width="18" height="18">
-                  <polygon points="4,9 14,9 9,16" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
+                  <polygon points="4,5 14,5 9,12" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
                 </svg>
               </span>
             </button>
