--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -54,8 +54,8 @@
               aria-expanded="false" aria-controls="lb1">
             <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">
               <span class="arrow">
-                <svg width="18" height="18">
-                  <polygon points="4,5 14,5 9,12" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
+                <svg width="18" height="16">
+                  <polygon points="3,5 15,5 9,13"></polygon>
                 </svg>
               </span>
             </button>
