--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -55,8 +55,8 @@
               aria-expanded="false" aria-controls="cb1-listbox">
             <button id="cb1-button" tabindex="-1" aria-label="Open">
               <span class="arrow">
-                <svg width="18" height="18">
-                  <polygon points="4,5 14,5 9,12" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
+                <svg width="18" height="16">
+                  <polygon points="3,5 15,5 9,13"></polygon>
                 </svg>
               </span>
             </button>
