--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -51,8 +51,8 @@
         <div class="combobox combobox-list">
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
-              aria-expanded="false" aria-controls="lb1">
-            <button type="button" id="cb1-button" aria-label="State" aria-expanded="false" aria-controls="cb1-input" tabindex="-1">
+              aria-expanded="false" aria-controls="cb1-listbox">
+            <button type="button" id="cb1-button" aria-label="State" aria-expanded="false" aria-controls="cb1-listbox" tabindex="-1">
               <span class="arrow">
                 <svg width="18" height="16" aria-hidden="true" focusable="false">
                   <polygon points="3,5 15,5 9,13"></polygon>
@@ -60,7 +60,7 @@
               </span>
             </button>
           </div>
-          <ul id="lb1" role="listbox" aria-label="States">
+          <ul id="cb1-listbox" role="listbox" aria-label="States">
             <li id="lb1-al" role="option">Alabama</li>
             <li id="lb1-ak" role="option">Alaska</li>
             <li id="lb1-as" role="option">American Samoa</li>
@@ -444,7 +444,7 @@
               <code>aria-controls="#IDREF"</code>
             </th>
             <td><code>button</code></td>
-            <td>Identifies the <code>input</code> element that serves as the popup.</td>
+            <td>Identifies the element that serves as the popup.</td>
           </tr>
           <tr data-test-id="button-aria-expanded">
             <td></td>
