--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -53,7 +53,7 @@
                    aria-autocomplete="none"
                    aria-expanded="false"
                    aria-controls="cb1-listbox">
-            <button type="button" id="cb1-button" tabindex="-1"  aria-label="State" aria-expanded="false" aria-controls="cb1-input" >
+            <button type="button" id="cb1-button" tabindex="-1"  aria-label="State" aria-expanded="false" aria-controls="cb1-listbox" >
               <span class="arrow">
                 <svg width="18" height="16" aria-hidden="true" focusable="false">
                   <polygon points="3,5 15,5 9,13"></polygon>
@@ -388,7 +388,7 @@
               <code>aria-controls="#IDREF"</code>
             </th>
             <td><code>button</code></td>
-            <td>Identifies the <code>input</code> element that serves as the popup.</td>
+            <td>Identifies the element that serves as the popup.</td>
           </tr>
           <tr data-test-id="button-aria-expanded">
             <td></td>
